# Theseus-1

applications/allocate/: Cargo.toml
applications/allocate/src/: lib.rs
applications/my_hello/: Cargo.toml
applications/my_hello/src/: lib.rs
applications/my_test/: Cargo.toml
applications/my_test/src/: lib.rs
kernel/heap/: Cargo.toml
kernel/heap/src/: lib.rs
kernel/memuse/: Cargo.toml
kernel/memuse/memuse/src/: lib.rs
kernel/memuse/src/: lib.rs
kernel/task/src/: lib.rs
