[package]
name = "allocate"
version = "0.1.0"
authors = ["Brandon Liu <byliu88@gmail.com>"]
build = "../../build.rs"

[dependencies]
core2 = { version = "0.3.2", default-features = false, features = ["alloc", "nightly"] }

[dependencies.app_io]
path = "../app_io"

[dependencies.task]
path = "../../kernel/task"

[dependencies.debugit]
path = "../../libs/debugit"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
