[package]
name = "memuse"
version = "0.1.0"
authors = ["Brandon Liu <byliu88@gmail.com>"]
build = "../../build.rs"

[dependencies]
getopts = "0.2.21"

[dependencies.debugit]
path = "../../libs/debugit"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.task]
path = "../../kernel/task"

[dependencies.runqueue]
path = "../../kernel/runqueue"

[dependencies.log]
version = "0.4.8"

# [dependencies.application_main_fn]
# path = "../../compiler_plugins"
